components/_content.scss
#product-space,
#search-content {
	min-height: calc(100vh - 70px);
	box-sizing: border-box;

	@include screen-size(medium-large) {
		padding-top: 60px;
		padding-bottom: 70px;
	}

	&:has(.swimlane) {
		padding-top: 0;
	}

	@include screen-size(small) {
		padding-top: 20px;
		padding-bottom: 20px;
	}

	&:has(.swim-lane) {
		padding-top: 0;
		padding-bottom: 0;

		&:has(#browse-bar) {
			#content {
				padding: 60px;
			}
		}
	}

	&.grid-on {
	    background-image: -moz-linear-gradient(top, rgba(0,0,0,0) 95%, rgba(0,0,0,0.3) 100%); /* FF3.6+ */
	    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(95%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.3))); /* Chrome,Safari4+ */
	    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0) 95%,rgba(0,0,0,0.3) 100%); /* Chrome10+,Safari5.1+ */
	    background-image: -o-linear-gradient(top, rgba(0,0,0,0) 95%, rgba(0,0,0,0.3) 100%); /* Opera11.10+ */
	    background-image: -ms-linear-gradient(top, rgba(0,0,0,0) 95%,rgba(0,0,0,0.3) 100%); /* IE10+ */
	    background-image: linear-gradient(top, rgba(0,0,0,0.3) 95%,rgba(0,0,0,0.3) 100%); /* W3C */
	     
	    -webkit-background-size: 100% $baseline;  
	         -o-background-size: 100% $baseline;
	            background-size: 100% $baseline;
	}

	body:has(#app-space.state-on) & {
		display: none;
	}
}

.variation-compare ~ #main #product-space,
.variation-compare ~ #main #search-content,
.variation-medicine-compare ~ #main #product-space,
.variation-medicine-compare ~ #main #search-content,
.variation-indication-compare ~ #main #product-space,
.variation-indication-compare ~ #main #search-content,
.variation-medicine-group-compare ~ #main #product-space
.variation-medicine-group-compare ~ #main #search-content {
	
	&:not(.compare-count-0) {
		background: white;
		padding-top: 0;

		> .container {
			max-width: inherit;
			
			@include screen-size(small) {
				padding: 0;
			}
		}
	}
}

